--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
         {
             "src": "/(.*)",
             "dest": "/"
+        },
+        {
+            "src": "/(about*)",
+            "dest": "/about"
         }
      ]
 }
